<resources>
    <string name="app_name">BakaMitai V2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_library">All Shows</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_settings">Settings</string>
    <string name="ep_">#%s</string>
    <string name="episode_">Episode %s</string>
    <string name="loading">Loading…</string>
    <string name="today">Today</string>
    <string name="latest_releases">Latest Releases</string>
    <string name="aired">Aired</string>
    <string name="not_aired">Not Aired</string>
    <string name="synopsis">Synopsis</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="show_image">Show image</string>
    <string name="collapse_button">Collapse button</string>
    <string name="bookmark">Bookmark</string>
    <string name="download">Download</string>

    <string name="date_today_at">Today at %1$s</string>
    <string name="date_tomorrow_at">Tomorrow at %1$s</string>
    <string name="date_yesterday_at">Yesterday at %1$s</string>
    <string name="date_day_at">%1$s at %2$s</string>

    <!-- Error -->
    <string name="error_1">Nani? Something went wrong while fetching your data! &#128534;</string>
    <string name="error_2">Yare yare…\nYour data could not be fetched!</string>
    <string name="error_3">Are? The data could not be fetched!</string>
    <string name="error_4">Something went wrong, and we could not fetch your data ~desu</string>

    <!-- Preference Titles -->
    <string name="preferences">Preferences</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="calendar_format">First day of week</string>
    <string name="time_format">Time format</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="more">More</string>
    <string name="information">Information</string>
    <string name="version">Version</string>
    <string name="version_no">1.0.0</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="author">github.com/zahichemaly</string>
    <string name="key_calendar">first_day</string>
    <string name="key_time_format">time_format</string>
    <string name="key_about">about</string>
    <string name="key_version">version</string>
    <string name="key_theme">theme</string>

    <!-- Notifications-->
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Notifications for bookmarked releases</string>
    <string name="notif_title">&#128293; New Release! &#128293;</string>
    <string name="notif_content">New episode of %s is out!</string>
    <string name="error">Error</string>
    <string name="empty_bookmarks">Whoops! You don\'t have any bookmarks. You can bookmark a show by going to its page. You
        will be notified of upcoming releases of shows that you bookmark.</string>
    <string name="share_text">Hey, check out this great anime: %s</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="downloads">Downloads</string>
    <string name="magnet">Magnet</string>
    <string name="torrent">Torrent</string>
    <string name="xdcc">XDCC</string>
    <string name="no_app_found_for_action">Could not find an app that could handle the performed action!</string>

    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="all_shows">All Shows</string>
    <string name="favorites">Favorites</string>
    <string name="error_message_no_internet">No internet connection. Please try again</string>
    <string name="error_message_unknown">Something went wrong</string>
</resources>
