<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.details.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/spacing_normal">

        <com.zc.bakamitai.ui.custom.LoadingView
            android:id="@+id/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/card_grid_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/card_details_width"
                android:layout_height="@dimen/card_details_height"
                android:layout_gravity="center"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardCornerRadius="@dimen/card_radius">

                <ImageView
                    android:id="@+id/ivEntry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/show_image"
                    android:scaleType="fitXY"
                    tools:src="@mipmap/ic_launcher" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_normal">

                <ImageButton
                    android:id="@+id/ibBookmark"
                    android:layout_width="@dimen/action_button_width_height"
                    android:layout_height="@dimen/action_button_width_height"
                    android:background="@android:color/transparent"
                    android:baselineAligned="false"
                    android:checked="false"
                    android:contentDescription="@string/bookmark"
                    android:src="@drawable/ic_bookmark_empty" />

                <ImageButton
                    android:id="@+id/ibDownload"
                    android:layout_width="@dimen/action_button_width_height"
                    android:layout_height="@dimen/action_button_width_height"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:background="@android:color/transparent"
                    android:checked="false"
                    android:contentDescription="@string/download"
                    android:src="@drawable/ic_download"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/ibShare"
                    android:layout_width="@dimen/action_button_width_height"
                    android:layout_height="@dimen/action_button_width_height"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:background="@android:color/transparent"
                    android:checked="false"
                    android:contentDescription="@string/download"
                    android:src="@drawable/ic_share" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/font_size_xxlarge"
                android:textStyle="bold"
                tools:text="Detective Conan Detective Conan Detective Conan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/synopsis"
                android:textColor="?attr/colorOnSecondary"
                android:textStyle="bold" />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="4">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/collapse_button"
                    android:padding="@dimen/spacing_normal" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/downloads"
                android:textColor="?attr/colorOnSecondary"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDownloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_download_summary" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>