<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/colorOnSecondary"
        tools:text="720p" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMagnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_100"
            app:cardCornerRadius="@dimen/card_radius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/spacing_xsmall"
                android:text="@string/magnet"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/font_size_normal" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTorrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_100"
            app:cardCornerRadius="@dimen/card_radius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/spacing_xsmall"
                android:text="@string/torrent"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/font_size_normal" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvXdcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_100"
            app:cardCornerRadius="@dimen/card_radius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/spacing_xsmall"
                android:text="@string/xdcc"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/font_size_normal" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>